--- a/README
+++ b/README
@@ -1,12 +1,18 @@
-This is what I use to work with rails in vim.  I like to have very IDE-like behavior since I do a ton of 
-jumping around between files within rails projects and I never liked leaving tons of buffers open.  
+This is what I use to work with rails in vim.  
 
-To use: copy all of the folders into your .vim directory and copy .vimrc to your home directory.
+To use: create symbolic links to vim directory and vimrc in your home dir.
 
 Contains:
 
 rails.vim
 NERD_tree.vim
-buftabs.vim (simple buffer list in status bar)
+tabbar.vim (most tab-like buffer manager i've found)
 bclose.vim (closes buffers without destroying window arrangement)
 vividchalk theme
+
+Config Settings:
+
+Arrows switch between splits (left right up down)
+Ctrl-right and Ctrl-left switch between next and prev buffers
+, is leader
+
